--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -10,9 +10,9 @@
                 <div class="col-lg-4 col-md-4 ml-15">
                     <h6 class="text-white mb-5"> Type Of Service</h6>
                     <div class="category-label silver-category">
-                            <i class="fa fa-circle-o"></i>
-                            <span>Services</span>
-                        </div>
+                        <i class="fa fa-circle-o"></i>
+                        <span>Services</span>
+                    </div>
 
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
@@ -30,10 +30,9 @@
                     <div class="custom-tooltip tooltip-top" ng-show="showCatError">
                         <div class="custom-tooltip-inner">
                             Select Category
-                        </div>                    
+                        </div>
                     </div>
                 </div>
-
 
             </div>
         </div>
@@ -48,24 +47,22 @@
                             <div class="custom-tooltip tooltip-right" ng-if="checkError">
                                 <div class="custom-tooltip-inner">
                                     You Need to agree TSA Protection rules!
-                                </div>                    
+                                </div>
                             </div>
                             <p>NOTE: The is a <span class="success bold">Tripartite Standard Agreement</span> form to protect both parties against any issues in the future. Read for more info <span class="success bold">here</span>.</p>
                             <div class="form-group mt-30 mb-0">
                                 <input class="magic-checkbox" type="checkbox" name="isaccept" id="note" ng-true-value="1" ng-false-value="0" ng-model="formData.isaccept" required ng-disabled="!formData.request_type" />
                                 <label class="text font-s" for="note" tooltip="{{categoryText}}" tooltip-is-open="ishover && !formData.isaccept && formData.request_category" tooltip-placement="right">Read and agreed to the TSA Protection Scheme</label>
-                                
+
                             </div>
                         </div>
-                        
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Add Images</label>
                             <span class="error error-text" ng-if="imageerror">Upload Images or add Video</span>
                         </div>
                         <input name="productfile" type="hidden" ng-model="formData.productfile" ng-required="formData.images.length == 0">
-                        <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
-                            ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!formData.request_type" ng-class="{'upload-btn-disabled': !formData.request_type}" ng-if="!viewingThumb.file">
+                        <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid" ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!formData.request_category" ng-class="{'upload-btn-disabled': !formData.request_type}" ng-if="!viewingThumb.file">
                             <div class="upload-inner">
                                 <div class="icon-container">
                                     <div class="img-holder"><img src="./../assets/img/upload.png" title="upload"></div>
@@ -100,20 +97,17 @@
                         </div>
 
                         <div class="form-group flex-center-space mb-0">
-                            <input type="text" class="form-control" name="videourl" ng-model="formData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="formData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
-                                ng-disabled="!formData.request_type || (formData.images.length == 6 && editkey == null)">
-                            <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!formData.request_type || (formData.images.length == 6 && editkey == null)">Add</button>
+                            <input type="text" class="form-control" name="videourl" ng-model="formData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="formData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/" ng-class="{ 'disabled': !formData.request_category || (formData.images.length == 6 && editkey == null) }">
+                            <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!formData.request_category || (formData.images.length == 6 && editkey == null)">Add</button>
                         </div>
 
                         <div class="thumb-wrapper mt-30">
-                            <div class="thumbs" ng-repeat="(key,data) in formData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="formData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)"
-                                tooltip-class="preview-tooltip">
+                            <div class="thumbs" ng-repeat="(key,data) in formData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="formData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="preview-tooltip">
                                 <div class="thumb" ng-class="{'active' : key == formData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
                                 <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == formData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
                                 <div class="thumb" ng-class="{'active' : key == formData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
                             </div>
-                            <div class="thumbs" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
-                                ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="formData.images.length < 6" ng-disabled="!formData.request_type">
+                            <div class="thumbs" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid" ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="formData.images.length < 6" ng-disabled="!formData.request_category">
                                 <div class="add-thumb">+</div>
                             </div>
                         </div>
@@ -127,24 +121,22 @@
 
                         <div class="form-group mb-0">
                             <label class="control-label">Service Title</label>
-                            <input type="text" class="form-control" name="title" placeholder="e.g. Title of the product that you want to sell or a services that you want to offer" ng-model="formData.title" required ng-class="{'disabled':!formData.type}" maxlength="100" />
+                            <input type="text" class="form-control" name="title" placeholder="e.g. Title of the product that you want to sell or a services that you want to offer" ng-model="formData.title" required ng-class="{'disabled':!formData.request_category}" maxlength="100" />
                             <span class="error error-text" ng-if="titleerror">Enter post Title</span>
                         </div>
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Service Description</label>
-                            <textarea class="form-control" name="description" rows="10" placeholder="This is where you can put a description of your item. It can be a product to sell, portfolio work or services to hire or to rent." ng-model="formData.description" required ng-disabled="!formData.request_type"
-                                maxlength="1000"></textarea>
+                            <textarea class="form-control" name="description" rows="10" placeholder="This is where you can put a description of your item. It can be a product to sell, portfolio work or services to hire or to rent." ng-model="formData.description" required ng-disabled="!formData.request_category" maxlength="1000"></textarea>
                             <span class="error error-text" ng-if="descriptionerror">Enter post Description</span>
                         </div>
-
 
                         <div class="form-row mt-30 mb-0">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Deadline</label>
                                     <datepicker date-format="dd/MM/yyyy" selector="form-control">
-                                        <input type="text" class="form-control input-with-icon" placeholder="Deadline" name="deadline" required readonly ng-model='formData.requestdeadline' ng-disabled="!formData.request_type" />
+                                        <input type="text" class="form-control input-with-icon" placeholder="Deadline" name="deadline" required readonly ng-model='formData.requestdeadline' ng-class="{'disabled':!formData.request_category}" />
                                         <span class="input-icon">
                                             <i class="fa fa-lg fa-calendar"></i>
                                         </span>
@@ -160,8 +152,8 @@
                             <div class="form-column flex-top-space ml-30">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Budget</label>
-                                        <input type="text" class="form-control input-with-icon" placeholder="0.00" name="price" ng-model="formData.price" required min="1" max="100000" limit-to-max step="0.01" valid-number precision="2" ng-disabled="!formData.request_type" />
-                                        <span class="input-icon">
+                                    <input type="text" class="form-control input-with-icon" placeholder="0.00" name="price" ng-model="formData.price" required min="1" max="100000" limit-to-max step="0.01" valid-number precision="2" ng-class="{'disabled':!formData.request_category}"/>
+                                    <span class="input-icon">
                                             <i class="fa fa-lg fa-dollar"></i>
                                         </span>
                                     <span class="error error-text" ng-if="priceerror">Enter Budget</span>
@@ -171,13 +163,12 @@
                             <div class="form-column flex-top-space ml-30">
                                 <div class="form-group wd-100">
                                     <label class="control-label">&nbsp;</label>
-                                    <ui-select name="periodtype" ng-model="formData.periodtype" theme="bootstrap" search-enabled="false" ng-disabled="!formData.request_type" onkeypress="return false;" onfocus="blur();">
+                                    <ui-select name="periodtype" ng-model="formData.periodtype" theme="bootstrap" search-enabled="false" ng-disabled=" !formData.request_category " onkeypress="return false;" onfocus="blur();">
                                         <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
-                                            <p>
-                                                <!-- <i class="fa fa-circle-o"></i>  -->{{formData.periodtype ? formData.periodtype : 'Select Period Type'}}
+                                            <p>{{formData.periodtype ? formData.periodtype : 'Select Period Type'}}
                                             </p>
                                         </ui-select-match>
-                                        <ui-select-choices  class="default-select-items" repeat="periodtype in periodtypes">
+                                        <ui-select-choices class="default-select-items" repeat="periodtype in periodtypes">
                                             <span ng-bind-html="periodtype | highlight: $select.search"></span>
                                         </ui-select-choices>
                                     </ui-select>
@@ -194,7 +185,7 @@
                             </div>
                             <div class="form-column-50 flex-top-space ml-15 mr-0">
                                 <div class="form-group wd-100">
-                                    <input class="magic-checkbox" type="checkbox" name="layout" id="save" ng-disabled="!formData.request_type" ng-true-value="1" ng-false-value="0" ng-model="formData.hasbargain" />
+                                    <input class="magic-checkbox" type="checkbox" name="layout" id="save" ng-class="{'disabled':!formData.request_category}" ng-true-value="1" ng-false-value="0" ng-model="formData.hasbargain" />
                                     <label class="text" for="save">Negotiable</label>
                                 </div>
                             </div>
