request modal update

--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -39,6 +39,7 @@
 
         <!-- Modal body -->
         <div class="custom-modal-body" ng-mouseover="showTooltip();" ng-mouseleave="hideTooltip();">
+            <div class="modal-inner-overlay"></div>
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 br-1">
