overlay added for forms

--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -27,7 +27,7 @@
                         </ui-select-choices>
                     </ui-select>
 
-                    <div class="custom-tooltip tooltip-top" ng-show="showCatError">
+                    <div class="custom-tooltip tooltip-left" ng-show="showCatError">
                         <div class="custom-tooltip-inner">
                             Select Category
                         </div>
